<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="147dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/pastikan"
            tools:ignore="SmallSp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            app:endIconMode="none"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="14"
                android:background="@drawable/edittext_background"
                android:inputType="number"
                android:hint="@string/nomor_handphone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            android:layout_marginTop="23dp"
            app:endIconTint="@color/colorPrimary"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:background="@drawable/edittext_background"
                android:layout_height="wrap_content"
                android:maxLength="7"
                android:inputType="numberPassword"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/lupa_password"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>