<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="22dp"
    android:orientation="vertical"
    android:layout_marginLeft="22dp"
    tools:context=".UbahDataDiriActivity">
    <LinearLayout
        android:layout_marginTop="17dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:layout_gravity="center_vertical"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back_14dp"
                />

            <TextView
                android:layout_marginLeft="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ubah_data_pribadi"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="93dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="93dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_image"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="1dp"
                android:src="@drawable/ic_avatar"
                android:layout_width="93dp"
                android:layout_height="93dp"/>
            <ImageView
                android:id="@+id/btn_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/circle_background"
                android:padding="7dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_edit"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/colorHint"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="31.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias"
                android:textColor="@color/colorHint"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="31.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_telepon"
                android:textColor="@color/colorHint"/>
            <TextView
                android:id="@+id/et_notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>