<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".fragments.BerandaFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingTop="25dp"
        android:orientation="vertical"
        android:paddingRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layanan"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_iuran_menu"
                app:cardCornerRadius="10dp"
                android:background="@android:color/white"
                android:layout_width="50dp"
                android:layout_height="50dp">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_iuran"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_laporan_menu"
                app:cardCornerRadius="10dp"
                android:background="@android:color/white"
                android:layout_width="50dp"
                android:layout_marginLeft="61dp"
                android:layout_marginRight="61dp"
                android:layout_height="50dp">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_laporan"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_donasi_menu"
                app:cardCornerRadius="10dp"
                android:background="@android:color/white"
                android:layout_width="50dp"
                android:layout_height="50dp">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_donation"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/iuran"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/laporan"
                android:layout_marginLeft="61dp"
                android:layout_marginRight="61dp"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="50dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/donasi"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_card_background"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="33dp"
        android:paddingRight="30dp"
        android:layout_marginTop="178dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pusat_informasi"/>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/fitur_unavailable"/>-->
<!--        </LinearLayout>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:layout_marginBottom="20dp"
                    />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            <TextView
                android:visibility="gone"
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/no_new_info"/>
        </RelativeLayout>
<!--        <TextView-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:background="@drawable/informasi_background_red"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:text="Mohon upload bukti pembayaran"-->
<!--            tools:ignore="RtlHardcoded" />-->


<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_height="wrap_content">-->
<!--        </androidx.recyclerview.widget.RecyclerView>-->
    </LinearLayout>
<!--    <RelativeLayout-->
<!--        android:id="@+id/overlay"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="#88000000"/>-->

</RelativeLayout>