<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/card_background"
    android:layout_height="wrap_content">
    <View
        android:layout_width="147dp"
        android:layout_height="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bottom_sheet_divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="29.5dp"
        android:layout_marginLeft="29.5dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/bs_tutup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutup"
            android:background="@drawable/border_blue"/>
        <TextView
            android:id="@+id/bs_edit"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:background="@drawable/blue"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Data Pribadi"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="12.5dp"
        android:layout_marginBottom="12.5dp"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="29.5dp"
        android:layout_marginLeft="29.5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"/>
            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="27dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No. Telp."/>
            <TextView
                android:id="@+id/no_telp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="27dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tanggal Lahir"/>
            <TextView
                android:id="@+id/tgl_lahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>